--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://github.com/Bababum95/how-to-learn/blob/main/styles/normalize.css">
+  <link rel="stylesheet" href="https://github.com/Bababum95/how-to-learn/blob/main/styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header header_title">Научиться учиться</h1>
+      <h2 class="header header_subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="header header_link" href="#">&rarr;</a>
+      </h2>
+      <div class="header header_main_illustration"></div>
+      <div class="header header_square_pic"></div>
+    </header>
 
   </div>
 </body>
