--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header header_link" href="#">&rarr;</a>
       </h2>
-      <div class="header header_main_illustration"></div>
-      <div class="header header_square_pic"></div>
+      <div class="header header__main-illustration"></div>
+      <div class="header header__square-pic"></div>
     </header>
 
   </div>
