--- a/index.html
+++ b/index.html
@@ -3,22 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://github.com/Bababum95/how-to-learn/blob/main/styles/normalize.css">
-  <link rel="stylesheet" href="https://github.com/Bababum95/how-to-learn/blob/main/styles/style.css">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header"></div>
-      <h1 class="header header_title">Научиться учиться</h1>
-      <h2 class="header header_subtitle">
+      <img src="images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+      <h1 class="header_title">Научиться учиться</h1>
+      <h2 class="header_subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header header_link" href="#">&rarr;</a>
+        <a class="header_link" href="#">Узнать &rarr;</a>
       </h2>
-      <div class="header header__main-illustration"></div>
-      <div class="header header__square-pic"></div>
+      <img src="images/header-image.png" alt="изображение мальчика" class="header__main-illustration">
+      <div class="header__square-pic"></div>
     </header>
+    <section class="description">
+      <div class="two-columns">
+        <h1 class="two-columns__bref">Главные проблемы в обучении</h1>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">
+            Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+          </p>
+          <p class="two-columns__paragraph">
+            <span class="two-columns__span-accent">Вывод:</span>
+            учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+          </p>
+          <p class="two-columns__paragraph">
+            Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+          </p>
+        </div>
+      </div>
+    </section>
 
   </div>
 </body>
