--- a/index.html
+++ b/index.html
@@ -127,11 +127,7 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </il>
       </ul>
-      <div class="kaufman__triangle">
-        <svg width="995" height="1006" viewBox="0 0 995 1006" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M247.666 717.014L499.294 0.404095L994.083 576.626L247.666 717.014Z" fill="#2F80ED"/>
-          </svg>
-      </div>
+      <div class="kaufman__triangle"></div>
     </section>
     <footer class="footer">
       <div class="footer__columns">
