--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav class="footer__column-links">
             <a href="#" class="footer__column-link">
-              <img src="images/youtube-icon.svg" alt="youtube" class="footer__social-icon">
+              <img src="images/youtube-icon.svg" alt="ютуб" class="footer__social-icon">
               YouTube
             </a>
             <a href="#" class="footer__column-link">
-              <img src="images/vk_color_white.svg" alt="vk" class="footer__social-icon">
+              <img src="images/vk_color_white.svg" alt="вк" class="footer__social-icon">
               ВКонтакте
             </a>
             <a href="#" class="footer__column-link">
-              <img src="images/tiktok-icon.svg" alt="tiktok" class="footer__social-icon">
+              <img src="images/tiktok-icon.svg" alt="тикток" class="footer__social-icon">
               TikTok
             </a>
           </nav>
