--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__bref">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
@@ -135,7 +135,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img src="images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
-          <p class="footer__author">&copy Виктор Абанькин</p>
+          <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
