--- a/index.html
+++ b/index.html
@@ -148,18 +148,9 @@
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link">
-              <img src="images/youtube-icon.svg" alt="ютуб" class="footer__social-icon">
-              YouTube
-            </a>
-            <a href="#" class="footer__column-link">
-              <img src="images/vk_color_white.svg" alt="вк" class="footer__social-icon">
-              ВКонтакте
-            </a>
-            <a href="#" class="footer__column-link">
-              <img src="images/tiktok-icon.svg" alt="тикток" class="footer__social-icon">
-              TikTok
-            </a>
+            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="ютуб" class="footer__social-icon">YouTube</a>
+            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="вк" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="тикток" class="footer__social-icon">TikTok</a>
           </nav>
         </div>
       </div>
