--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../how-to-learn/page/page.css">
+  <link rel="stylesheet" href="../how-to-learn/page/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -48,7 +48,8 @@
           <li class="cards__item">
             <img src="../how-to-learn/images/cards-attention.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Два вида внимания</h5>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.
             </p>
           </li>
           <li class="cards__item">
@@ -64,12 +65,14 @@
           <li class="cards__item">
             <img src="../how-to-learn/images/cards-question.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Вопросы</h5>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
           </li>
           <li class="cards__item">
             <img src="../how-to-learn/images/cards-competence.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Иллюзия компетентности</h5>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
           </li>
         </ul>
       </section>
@@ -78,10 +81,12 @@
         <h4 class="section-subtitle">Для тех, кто любит прокрастинировать</h4>
         <ul class="video__iframes">
           <li>
-            <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
+              frameborder="0" allowfullscreen></iframe>
           </li>
           <li>
-            <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU"
+              frameborder="0" allowfullscreen></iframe>
           </li>
         </ul>
       </section>
@@ -90,9 +95,14 @@
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
-              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не
+              самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в
+              командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо
+              глубже, чем у тех, кому всё ясно с первого взгляда.
             </p>
           </div>
+        </div>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -145,13 +155,15 @@
           <h5 class="khan__author">Салман Хан</h5>
           <h3 class="khan__title">Весь мир — школа</h3>
           <blockquote class="khan__quote">
-            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+              миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+              смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           </blockquote>
           <h6 class="khan__quote-author">Джордж Лукас</h6>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" alt="обложка" src="../how-to-learn/images/khan-book.jpg">
-            <a class="khan__buy-link" href="#" >Купить книгу &rarr;</a>
+            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -208,16 +220,16 @@
         <h4 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h4>
         <ul class="resources__logo-zone">
           <li class="resources__link">
-            <a href="#"><img src="../how-to-learn/images/logo/resources-arzamas.svg"></a>
+            <a href="#"><img alt="арзамас" src="../how-to-learn/images/logo/resources-arzamas.svg"></a>
           </li>
           <li class="resources__link">
-            <a href="#"><img src="../how-to-learn/images/logo/resources-n1.svg"></a>
+            <a href="#"><img alt="н1" src="../how-to-learn/images/logo/resources-n1.svg"></a>
           </li>
           <li class="resources__link">
-            <a href="#"><img src="../how-to-learn/images/logo/resources-strelka.svg"></a>
+            <a href="#"><img alt="стрелка" src="../how-to-learn/images/logo/resources-strelka.svg"></a>
           </li>
           <li class="resources__link">
-            <a href="#"><img src="../how-to-learn/images/logo/resources-polka.svg"></a>
+            <a href="#"><img alt="полка" src="../how-to-learn/images/logo/resources-polka.svg"></a>
           </li>
         </ul>
       </section>
