--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <h4 class="section-subtitle">Для тех, кто любит прокрастинировать</h4>
         <ul class="video__iframes">
           <li>
-            <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
-              frameborder="0" allowfullscreen></iframe>
+            <iframe class="video__iframe" id="kaufman" src="https://www.youtube.com/embed/5MgBikgcWnY"
+              allowfullscreen></iframe>
           </li>
           <li>
-            <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU"
-              frameborder="0" allowfullscreen></iframe>
+            <iframe class="video__iframe" id="urban" src="https://www.youtube.com/embed/arj7oStGLkU"
+              allowfullscreen></iframe>
           </li>
         </ul>
       </section>
