--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../how-to-learn/page/index.css">
+  <link rel="stylesheet" href="./page/index.css">
   <title>Научиться учиться</title>
 </head>
 
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать &rarr;</a>
       </p>
-      <img src="images/header-image.png" alt="изображение мальчика" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="изображение мальчика" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
@@ -46,30 +46,30 @@
         <h4 class="section-subtitle">Пять практик от Барбары Оакли</h4>
         <ul class="cards">
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-attention.png" class="cards__image" alt="картинка">
+            <img src="./images/cards-attention.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Два вида внимания</h5>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.
             </p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-recall.png" class="cards__image" alt="картинка">
+            <img src="./images/cards-recall.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Recall</h5>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-interliving.png" class="cards__image" alt="картинка">
+            <img src="./images/cards-interliving.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Интерливинг</h5>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-question.png" class="cards__image" alt="картинка">
+            <img src="./images/cards-question.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Вопросы</h5>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="../how-to-learn/images/cards-competence.png" class="cards__image" alt="картинка">
+            <img src="./images/cards-competence.png" class="cards__image" alt="картинка">
             <h5 class="cards__title">Иллюзия компетентности</h5>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -108,7 +108,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a class="feynman__link" href="#">Подробнее &rarr;</a>
-        <img src="images/feynman.png" alt="изображение Феймана" class="feynman__img">
+        <img src="./images/feynman.png" alt="изображение Феймана" class="feynman__img">
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -162,7 +162,7 @@
           <h6 class="khan__quote-author">Джордж Лукас</h6>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" alt="обложка" src="../how-to-learn/images/khan-book.jpg">
+            <img class="khan__book-pic" alt="обложка" src="./images/khan-book.jpg">
             <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -220,16 +220,16 @@
         <h4 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h4>
         <ul class="resources__logo-zone">
           <li class="resources__link">
-            <a href="#"><img alt="арзамас" src="../how-to-learn/images/logo/resources-arzamas.svg"></a>
+            <a href="#"><img alt="арзамас" src="./images/logo/resources-arzamas.svg"></a>
           </li>
           <li class="resources__link">
-            <a href="#"><img alt="н1" src="../how-to-learn/images/logo/resources-n1.svg"></a>
+            <a href="#"><img alt="н1" src="./images/logo/resources-n1.svg"></a>
           </li>
           <li class="resources__link">
-            <a href="#"><img alt="стрелка" src="../how-to-learn/images/logo/resources-strelka.svg"></a>
+            <a href="#"><img alt="стрелка" src="./images/logo/resources-strelka.svg"></a>
           </li>
           <li class="resources__link">
-            <a href="#"><img alt="полка" src="../how-to-learn/images/logo/resources-polka.svg"></a>
+            <a href="#"><img alt="полка" src="./images/logo/resources-polka.svg"></a>
           </li>
         </ul>
       </section>
@@ -237,7 +237,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
@@ -251,11 +251,11 @@
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="ютуб"
+            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="ютуб"
                 class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="вк"
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="вк"
                 class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="тикток"
+            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="тикток"
                 class="footer__social-icon">TikTok</a>
           </nav>
         </div>
