--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
-        <p class="footer__author">&copy; Виктор Абанькин</p>
+        <p class="footer__author">&copy; Степанов Андрей</p>
       </div>
       <div class="footer__column footer__column_content_info">
         <h4 class="footer__column-heading">О Практикуме</h4>
